<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_250"
        android:src="@android:color/black"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/banner_text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_heading"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@android:color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/dimen_90"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_13"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dimen_21" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="382dp" />


    <include
        android:id="@+id/include"
        layout="@layout/search_bar"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginBottom="@dimen/dimen_40"
        app:layout_constraintBottom_toBottomOf="@+id/img_banner"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toEndOf="@id/guideline" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_banner"
        app:tabIndicatorColor="@color/tab_slelect"
        app:tabSelectedTextColor="@color/tab_slelect"
        app:tabTextColor="@android:color/darker_gray"
        app:tabTextAppearance="@style/CustomTextAppearanceTab">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabVideo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favorites" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>